[package]
name = "sdfsurfer"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
nalgebra = "0.22"
gilrs = "0.8"
notify = "4.0"
structopt = { version = "0.3", default-features = false }
shaderc = "0.7"

[dependencies.wiiboard]
git = "https://github.com/Masterchef365/wiiboard.git"
branch = "better_polling"

[dependencies.klystron]
git = "https://github.com/Masterchef365/klystron.git"
branch = "sdf_surfer"
